# syscall.rs

./: .travis.yml  Cargo.toml  build.rs
native/: linux-armeabi.c  linux-x86.c  x86_64-abi.c
src/: lib.rs
src/platform/freebsd-x86_64/: mod.rs
src/platform/linux-aarch64/: mod.rs  nr.rs
src/platform/linux-armeabi/: mod.rs
src/platform/linux-x86/: mod.rs
src/platform/linux-x86_64/: mod.rs
src/platform/macos-x86_64/: mod.rs
